# BIDS-image-viewer

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
client/: Dockerfile  nginx.conf  package-lock.json  package.json
client/public/: manifest.json
client/src/: App.js  Niivue.jsx  api.js  apiConfig.js  pathUtils.js
client/src/components/: CollapsibleMenu.jsx  Dialogs.jsx  IconGroup.jsx  NiiVue.jsx  NiiVue.test.js  NiivueComponents.jsx  tools.jsx
client/src/components/niivueComponents/: NiiVue.jsx  NiivuePanel.jsx
client/src/utils/: defaults.json
server/: Dockerfile  bids.json  config.py  dataDict.json  file_handling.py  pyproject.toml  requirements.txt  server.py
src/: App.css  App.js
src/components/: CollapsibleMenu.jsx  NiiVue.jsx  tools.jsx
