[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "server"
description = "Server for the webapp image viewer"
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
authors = [
  {name="Pierre Nedelec", email="pierre.nedelec@ucsf.edu" },
]
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = ["Flask", "pybids"]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/your/package"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "server/_version.py"